rolling update works

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 		</table>
 	</form>
 	</div>
-	<b><big>To-Do LIST :</big></b>
+	<b><big>To-Do LIST - ROLLBACK UPDATED :</big></b>
 	<table>
 	    <tr id="row">
 	    	<th class="status">Status</th>
